--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <img src="https://placehold.co/600x400" alt="Analytics Dashboard" class="img-fluid rounded-4 shadow-lg">
+                    <img src="{{ url_for('static', filename='images/dashboard-ill.png') }}" alt="Analytics Dashboard">
                 </div>
                 <div class="col-lg-6">
                     <h2>Data-Driven Decision Making</h2>
@@ -220,4 +220,5 @@
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
